fix .wrap{} for ie11

--- a/src/lucy.grid.css
+++ b/src/lucy.grid.css
@@ -51,7 +51,7 @@ Widths - responsive/fixed flex-grid utilities, exmpl:
     <grid>
         <cell w6>content (and inner grids)
 */
-.wrap{margin-left:auto;margin-right:auto}
+.wrap{margin-left:auto;margin-right:auto;width:100%}
 /*
 widths for list-cells, exmpl:<ul class="grid li4"><li>
 */
